# gpt-codex-handoff

./: .env.example  .gitignore  README.md  pyproject.toml  reviewer_prompt.md
docs/: long_run_protocol.md
examples/: fake_reviewer.py
scripts/: diagnose_reviewer_setup.py  setup_codex_mcp.py
src/gpt_codex_handoff/: __init__.py  context.py  mcp_server.py  reviewer.py  stop_hook.py
tests/: test_diagnose_reviewer_setup.py  test_fake_example.py  test_mcp_server.py  test_reviewer.py  test_setup_codex_mcp.py
